<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Academics"
    android:background="@drawable/gradient_background">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:layout_marginBottom="50dp"
                android:paddingBottom="50dp"

                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/departments"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textSize="60dp"
                    android:textColor="@color/black"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"/>
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:elevation="500dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="10dp"
                    app:cardUseCompatPadding="true"
                    app:cardPreventCornerOverlap="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="20dp"
                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        >


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:text="@string/computer_engineering_department"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="25dp"
                            android:textStyle="bold"
                            />
                        <ImageView

                            android:layout_width="400dp"
                            android:layout_height="200dp"
                            android:src="@drawable/computerengg"
                            android:layout_gravity="center"
                            android:background="@color/black"


                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:text="@string/head_of_department_n_prof_dr_s_r_dhore"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:layout_margin="10dp"
                            />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:elevation="500dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="10dp"
                    app:cardUseCompatPadding="true"
                    app:cardPreventCornerOverlap="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginBottom="10dp"
                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:text="@string/information_technology"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="25dp"
                            android:textStyle="bold" />
                        <ImageView

                            android:layout_width="400dp"
                            android:layout_height="200dp"
                            android:src="@drawable/informationtech"
                            android:layout_gravity="center"
                            android:background="@color/black"

                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:text="Head Of Department:\nDr.(Mrs)Sangeeta Jadhav"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:layout_margin="10dp"
                            />
                    </LinearLayout>


                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:elevation="500dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="10dp"
                    app:cardUseCompatPadding="true"
                    app:cardPreventCornerOverlap="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="20dp"
                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:text="@string/electronics_and_telecommunication_department"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="25dp"
                            android:textStyle="bold" />
                        <ImageView

                            android:layout_width="400dp"
                            android:layout_height="200dp"
                            android:src="@drawable/entcengg"
                            android:layout_gravity="center"
                            android:background="@color/black"

                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:text="Head Of Department:\nDr. G R Patil"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:layout_margin="10dp"
                            />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:elevation="500dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="10dp"
                    app:cardUseCompatPadding="true"
                    app:cardPreventCornerOverlap="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginBottom="30dp"
                    android:layout_marginTop="20dp"

                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        >
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:text="@string/mechanical_engineering_department"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="25dp"
                            android:textStyle="bold" />
                        <ImageView

                            android:layout_width="400dp"
                            android:layout_height="200dp"
                            android:src="@drawable/mechanical"
                            android:layout_gravity="center"
                            android:background="@color/black"

                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:text="@string/head_of_department_nprof_dr_sanjiv_manohar_sansgiri"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:layout_margin="10dp"
                            />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:elevation="500dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="10dp"
                    app:cardUseCompatPadding="true"
                    app:cardPreventCornerOverlap="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="20dp"
                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:text="Applied Science and General Engineering"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="25dp"
                            android:textStyle="bold"
                            />
                        <ImageView

                            android:layout_width="400dp"
                            android:layout_height="200dp"
                            android:src="@drawable/chemistry"
                            android:layout_gravity="center"
                            android:background="@color/white"

                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:text="Head Of Department:\nDr. (Mrs)Swati Kulkarni"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:layout_margin="10dp"
                            />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </ScrollView>


</FrameLayout>