<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".home"
    android:background="@drawable/gradient_background">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingRight="5dp">


        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:id="@+id/buttonlogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Login"
                android:layout_gravity="end"/>






            <androidx.cardview.widget.CardView
                android:id="@+id/aitFrontCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:elevation="500dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"


                app:cardMaxElevation="10dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <HorizontalScrollView
                    android:layout_width="380dp"
                    android:layout_height="200dp"
                    android:scrollbarStyle="insideInset"
                    android:scrollbarSize="4dp"
                    android:scrollIndicators="start"
                    android:fadeScrollbars="false"
                    android:scrollbarThumbHorizontal="@drawable/gradient_background"
                    android:layout_gravity="center_horizontal"
                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"

                        >

                        <ImageView
                            android:layout_width="380dp"

                            android:layout_height="match_parent"
                            android:src="@drawable/one"/>
                        <ImageView
                            android:layout_width="380dp"
                            android:layout_height="match_parent"
                            android:src="@drawable/two"/>
                        <ImageView
                            android:layout_width="380dp"
                            android:layout_height="match_parent"
                            android:src="@drawable/three"/>
                    </LinearLayout>
                </HorizontalScrollView>


            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:elevation="500dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"


                app:cardMaxElevation="10dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                    <ImageView
                        android:id="@+id/aitFront"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"


                        android:paddingTop="10dp"
                        android:src="@drawable/ic_aitpune_front" />

                    <TextView
                        android:id="@+id/overview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/gradient_background"
                        android:text="@string/overview"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/overviewContent"
                        android:layout_width="wrap_content"
                        android:layout_height="400dp"

                        android:layout_margin="10dp"
                        android:layout_marginBottom="20dp"
                        android:background="@drawable/schoolarbgd"
                        android:padding="20dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/Overview_Ait"
                        android:textColor="@color/black"

                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:elevation="500dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"


                app:cardMaxElevation="10dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Sneak Peek Inside AIT"

                        android:layout_marginTop="20dp"
                        android:background="@drawable/gradient_background"

                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="30sp"
                        android:textStyle="bold"/>
                    <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/youtube_player"
                        app:videoId="FOQm1JPJ7BI"
                        app:autoPlay="false"
                        android:layout_margin="10dp"/>

                </LinearLayout>


            </androidx.cardview.widget.CardView>



            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:elevation="500dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"


                app:cardMaxElevation="10dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:src="@drawable/img_aitclose" />
                    <TextView
                        android:id="@+id/history"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="History"
                        android:textColor="@color/black"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:background="@drawable/gradient_background"
                        />
                    <TextView
                        android:id="@+id/historyContent"
                        android:layout_width="wrap_content"
                        android:layout_height="700dp"
                        android:text="@string/History"
                        android:background="@drawable/schoolarbgd"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:layout_margin="10dp"/>


                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>


</FrameLayout>